--- a/certificates.html
+++ b/certificates.html
@@ -219,23 +219,23 @@
     <h2>Sertifikat</h2>
     <div class="certificate-grid">
       <div class="certificate-card">
-        <img src="image/1.png" alt="Frontend Web Developer - Dicoding" />
+        <img src="1.png" alt="Frontend Web Developer - Dicoding" />
         <p> FCF -getting started in cybersecurity 2.0 self-paced</p>
       </div>
       <div class="certificate-card">
-        <img src="image/2.png" alt="React Developer - Udemy" />
+        <img src="2.png" alt="React Developer - Udemy" />
         <p>FCF - Technical introduction to cybersecurity 1.0 self-paced</p>
       </div>
       <div class="certificate-card">
-        <img src="image/3.png" alt="Python for Everybody - Coursera" />
+        <img src="3.png" alt="Python for Everybody - Coursera" />
         <p>FCF - introduction to the landscape 2.0 self-paced</p>
       </div>
       <div class="certificate-card">
-        <img src="image/4.png" alt="Dasar Jaringan Komputer - Cisco" />
+        <img src="4.png" alt="Dasar Jaringan Komputer - Cisco" />
         <p>redhart system administrtion 1.RH124-RHA ver 9.3</p>
       </div>
       <div class="certificate-card">
-        <img src="image/5.png" alt="Linux Fundamental - Progate" />
+        <img src="5.png" alt="Linux Fundamental - Progate" />
         <p>redhart training getting started with linux foundocumentals RH104-RHA - ver 9.1</p>
       </div>
       
