--- a/skills.html
+++ b/skills.html
@@ -171,7 +171,7 @@
 <body>
   <header>
     <h1>Portofolio Saya</h1>
-    <p>Membangun Masa Depan dengan Teknologi & Kolaborasi</p>
+    <p></p>
   </header>
 
   <nav>
@@ -182,7 +182,7 @@
   </nav>
 
   <section id="skills">
-    <h2>Keahlian</h2>
+    <h2>Skills</h2>
     <div class="skills-grid">
       <div class="skill-card">
         Membuat proyek web bertema peternakan sapi menggunakan HTML dan CSS
