--- a/skills.html
+++ b/skills.html
@@ -185,13 +185,22 @@
     <h2>Skills</h2>
     <div class="skills-grid">
       <div class="skill-card">
-        Membuat proyek web bertema peternakan sapi menggunakan HTML dan CSS
+        Debian
+        Konfigurasi DNS Server
+        Membuat FTP Server dan File Sharing
+        Manajemen user dan permission di Linux
       </div>
       <div class="skill-card">
-        Bergabung dengan organisasi kepanduan & kerja tim
+        Mikrotik
+        Konfigurasi Wireless Access Point menggunakan Mikrotik
+        Membuat VLAN dan Routing Static di Mikrotik
+        Konfigurasi NAT dan Firewall untuk jaringan lokal
       </div>
       <div class="skill-card">
-        Menyusun modul jaringan dasar hingga lanjutan
+        Pemrogaman
+        CSS
+        HTML
+        JavaScript
       </div>
     </div>
   </section>
